--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
     app: "docker-react"
     env: "DockerReact-env"
     bucket_name: "elasticbeanstalk-us-east-2-217310886502"
-    bucket_path: "docker"
+    bucket_path: "docker-react"
     on:
         branch: master
     access_key_id: $AWS_ACCESS_KEY
